about-me & background & studies update

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./styles/main.css">
-    <link rel="icon" type="image/x-icon" href="./images/logo-index.ico">
-    <link rel="icon" type="image/png" href="./images/logo-index.png">
+    <link rel="icon" type="image/x-icon" href="./images/logos/logo-index.ico">
+    <link rel="icon" type="image/png" href="./images/logos/logo-index.png">
     <title data-i18n="title">Pol Fernández Fernández</title>
 </head>
 <body>
@@ -14,27 +14,27 @@
     <div class="carousel" aria-label="Carrusel de navegación principal">
         <div class="carousel-track">
             <div class="carousel-slide">
-                <a href="./pages/about-me.html" aria-label="Ir a Sobre Mí"><img src="./images/sobre-mi.jpg" alt="Sobre Mí"></a>
+                <a href="./pages/about-me.html" aria-label="Ir a Sobre Mí"><img src="./images/fotos/sobre-mi.jpg" alt="Sobre Mí"></a>
                 <span class="carousel-caption" data-i18n="carousel.about">Sobre Mí</span>
             </div>
             <div class="carousel-slide">
-                <a href="./pages/aeroespace.html" aria-label="Ir a Ingeniería Aeroespacial"><img src="./images/aeros.jpg" alt="Ingeniería Aeroespacial"></a>
+                <a href="./pages/aerospace.html" aria-label="Ir a Ingeniería Aeroespacial"><img src="./images/fotos/aeros.jpg" alt="Ingeniería Aeroespacial"></a>
                 <span class="carousel-caption" data-i18n="carousel.aerospace">Ingeniería Aeroespacial</span>
             </div>
             <div class="carousel-slide">
-                <a href="./pages/telecommunitacions.html" aria-label="Ir a Ingeniería en Telecomunicaciones"><img src="./images/telecos.jpg" alt="Ingeniería en Telecomunicaciones"></a>
+                <a href="./pages/telecommunications.html" aria-label="Ir a Ingeniería en Telecomunicaciones"><img src="./images/fotos/telecos.jpg" alt="Ingeniería en Telecomunicaciones"></a>
                 <span class="carousel-caption" data-i18n="carousel.telecom">Ingeniería en Telecomunicaciones</span>
             </div>
             <div class="carousel-slide">
-                <a href="./pages/experience.html" aria-label="Ir a Experiencia"><img src="./images/experiencia.jpg" alt="Experiencia"></a>
+                <a href="./pages/experience.html" aria-label="Ir a Experiencia"><img src="./images/fotos/experiencia.jpg" alt="Experiencia"></a>
                 <span class="carousel-caption" data-i18n="carousel.experience">Experiencia</span>
             </div>
             <div class="carousel-slide">
-                <a href="./pages/projects.html" aria-label="Ir a Proyectos"><img src="./images/proyectos.jpg" alt="Proyectos"></a>
+                <a href="./pages/projects.html" aria-label="Ir a Proyectos"><img src="./images/fotos/proyectos.jpg" alt="Proyectos"></a>
                 <span class="carousel-caption" data-i18n="carousel.projects">Proyectos</span>
             </div>
             <div class="carousel-slide">
-                <a href="./pages/contact.html" aria-label="Ir a Contacto"><img src="./images/contacto.jpg" alt="Contacto"></a>
+                <a href="./pages/contact.html" aria-label="Ir a Contacto"><img src="./images/fotos/contacto.jpg" alt="Contacto"></a>
                 <span class="carousel-caption" data-i18n="carousel.contact">Contacto</span>
             </div>
         </div>
@@ -47,15 +47,15 @@
     </div>
     <div class="main-buttons">
         <button id="visitar-github" class="main-btn" onclick="window.open('https://github.com/fernandezfernandezpol', '_blank')" aria-label="Abrir perfil de GitHub en una nueva pestaña">
-            <img src="./images/github.png" alt="GitHub" class="btn-icon" title="linkedin icons > Linkedin icons created by riajulislam - Flaticon">
+            <img src="./images/logos/github.png" alt="GitHub" class="btn-icon" title="linkedin icons > Linkedin icons created by riajulislam - Flaticon">
             <span data-i18n="main.githubProfile">Perfil de&nbsp;GitHub</span>
         </button>
         <button id="visitar-linkedin" class="main-btn" onclick="window.open('https://www.linkedin.com/in/pol-fernández-fernández-39b14b222', '_blank')" aria-label="Abrir perfil de LinkedIn en una nueva pestaña">
-            <img src="./images/linkedin.png" alt="LinkedIn" class="btn-icon" title="github icons > Github icons created by riajulislam - Flaticon">
+            <img src="./images/logos/linkedin.png" alt="LinkedIn" class="btn-icon" title="github icons > Github icons created by riajulislam - Flaticon">
             <span data-i18n="main.linkedinProfile">Perfil de LinkedIn</span>
         </button>
         <button id="descargar-cv" class="main-btn" aria-label="Descargar Curriculum Vitae">
-            <img src="./images/curriculum-vitae.png" alt="Curriculum Vitae" class="btn-icon" title="curriculum icons > Curriculum icons created by Freepik - Flaticon">
+            <img src="./images/logos/curriculum-vitae.png" alt="Curriculum Vitae" class="btn-icon" title="curriculum icons > Curriculum icons created by Freepik - Flaticon">
             <span data-i18n="main.downloadCV">Descargar CV</span>
         </button>
     </div>
