--- a/pages/attributions.html
+++ b/pages/attributions.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../styles/main.css">
-    <link rel="icon" type="image/x-icon" href="../images/logo-index.ico">
-    <link rel="icon" type="image/png" href="../images/logo-index.png">
+    <link rel="icon" type="image/x-icon" href="../images/logos/logo-index.ico">
+    <link rel="icon" type="image/png" href="../images/logos/logo-index.png">
     <title data-i18n="title">Atribuciones</title>
 </head>
 <body>
