--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../styles/main.css">
-    <link rel="icon" type="image/x-icon" href="../images/logo-index.ico">
-    <link rel="icon" type="image/png" href="../images/logo-index.png">
+    <link rel="icon" type="image/x-icon" href="../images/logos/logo-index.ico">
+    <link rel="icon" type="image/png" href="../images/logos/logo-index.png">
     <title data-i18n="title">Contacto</title>
 </head>
 <body>
@@ -16,31 +16,31 @@
     <div class="vertical-buttons">
         <div class="button-row">
             <button class="main-btn contact">
-                <img src="../images/gmail.png" alt="Gmail" class="btn-icon">
+                <img src="../images/logos/gmail.png" alt="Gmail" class="btn-icon">
             </button>
             <span class="button-label" data-i18n="email-label">Email:<br>fernandezfernandezpol@gmail.com</span>
         </div>
         <div class="button-row">
             <button id="show-contact-form" class="main-btn contact">
-                <img src="../images/phone.png" alt="Phone" class="btn-icon">
+                <img src="../images/logos/phone.png" alt="Phone" class="btn-icon">
             </button>
             <span class="button-label" data-i18n="phone-label">Número de teléfono:<br>Rellena el formulario de contacto</span>
         </div>
         <div class="button-row">
             <button id="visitar-linkedin" class="main-btn contact" onclick="window.open('https://www.linkedin.com/in/pol-fernández-fernández-39b14b222', '_blank')">
-                <img src="../images/linkedin.png" alt="LinkedIn" class="btn-icon">
+                <img src="../images/logos/linkedin.png" alt="LinkedIn" class="btn-icon">
             </button>
             <span class="button-label" data-i18n="linkedin-label">LinkedIn:<br>Pol Fernández Fernández</span>
         </div>
         <div class="button-row">
             <button id="visitar-github" class="main-btn contact" onclick="window.open('https://github.com/fernandezfernandezpol', '_blank')">
-                <img src="../images/github.png" alt="GitHub" class="btn-icon">
+                <img src="../images/logos/github.png" alt="GitHub" class="btn-icon">
             </button>
             <span class="button-label" data-i18n="github-label">Github:<br>@fernandezfernandezpol</span>
         </div>
         <div class="button-row">
             <button class="main-btn contact" onclick="window.open('https://www.youtube.com/@fernandezfernandezpol', '_blank')">
-                <img src="../images/youtube.png" alt="Youtube" class="btn-icon">
+                <img src="../images/logos/youtube.png" alt="Youtube" class="btn-icon">
             </button>
             <span class="button-label" data-i18n="youtube-label">Youtube:<br>@fernandezfernandezpol</span>
         </div>
