--- a/pages/experience.html
+++ b/pages/experience.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../styles/main.css">
-    <link rel="icon" type="image/x-icon" href="../images/logo-index.ico">
-    <link rel="icon" type="image/png" href="../images/logo-index.png">
+    <link rel="icon" type="image/x-icon" href="../images/logos/logo-index.ico">
+    <link rel="icon" type="image/png" href="../images/logos/logo-index.png">
     <title data-i18n="title">Experiencia</title>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
@@ -16,7 +16,7 @@
     </div>
     <div class="company-card">
         <div class="company-content">
-            <img src="../images/logo-nanosatlab.jpeg" alt="Miembro de Nanosat Lab - UPC" class="company-logo">
+            <img src="../images/logos/logo-nanosatlab.jpeg" alt="Miembro de Nanosat Lab - UPC" class="company-logo">
             <div class="company-details">
                 <span class="company-name">Nanosat Lab - UPC</span>
                 <div class="company-time">Junio 2025 - Actualidad</div>
@@ -28,7 +28,7 @@
     </div>
     <div class="company-card">
         <div class="company-content">
-            <img src="../images/profesor.png" alt="Profesor de clases particulares" class="company-logo">
+            <img src="../images/logos/profesor.png" alt="Profesor de clases particulares" class="company-logo">
             <div class="company-details">
                 <span class="company-name">Profesor de clases particulares</span>
                 <div class="company-time">Marzo 2021 - Junio 2025</div>
@@ -40,7 +40,7 @@
     </div>
     <div class="company-card">
         <div class="company-content">
-            <img src="../images/mercadona.jpg" alt="Mercadona" class="company-logo">
+            <img src="../images/logos/mercadona.jpg" alt="Mercadona" class="company-logo">
             <div class="company-details">
                 <span class="company-name">Mercadona</span>
                 <div class="company-time">Octubre 2023 - Enero 2024</div>
@@ -55,7 +55,7 @@
     </div>
     <div class="company-card">
         <div class="company-content">
-            <img src="../images/logo-euroavia.jpg" alt="Miembro de Euroavia Castelldefels" class="company-logo">
+            <img src="../images/logos/logo-euroavia.jpg" alt="Miembro de Euroavia Castelldefels" class="company-logo">
             <div class="company-details">
                 <span class="company-name">Euroavia Castelldefels</span>
                 <div class="company-time">Septiembre 2024 - Actualidad</div>
