--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../styles/main.css">
-    <link rel="icon" type="image/x-icon" href="../images/logo-index.ico">
-    <link rel="icon" type="image/png" href="../images/logo-index.png">
+    <link rel="icon" type="image/x-icon" href="../images/logos/logo-index.ico">
+    <link rel="icon" type="image/png" href="../images/logos/logo-index.png">
     <title data-i18n="title">Proyectos</title>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
@@ -17,20 +17,20 @@
     <section class="projects-list">
         <div class="project-card">
             <div class="project-content">
-                <img src="../images/pagina-web.png" alt="Logo página web" class="project-logo" onclick="window.open('https://github.com/fernandezfernandezpol/portfolio-website', '_blank')" aria-label="Abrir Portfolio Website en GitHub">
+                <img src="../images/logos/pagina-web.png" alt="Logo página web" class="project-logo" onclick="window.open('https://github.com/fernandezfernandezpol/portfolio-website', '_blank')" aria-label="Abrir Portfolio Website en GitHub">
                 <div class="project-details">
                     <span class="project-name">Portfolio Website</span>
                     <div class="project-badges">
                         <div class="project-badge">
-                            <img src="../images/html.png" alt="HTML" class="badge-logo">
+                            <img src="../images/logos/html.png" alt="HTML" class="badge-logo">
                             <span>HTML</span>
                         </div>
                         <div class="project-badge">
-                            <img src="../images/css.png" alt="CSS" class="badge-logo">
+                            <img src="../images/logos/css.png" alt="CSS" class="badge-logo">
                             <span>CSS</span>
                         </div>
                         <div class="project-badge">
-                            <img src="../images/javascript.png" alt="JavaScript" class="badge-logo">
+                            <img src="../images/logos/javascript.png" alt="JavaScript" class="badge-logo">
                             <span>JavaScript</span>
                         </div>
                     </div>
@@ -42,12 +42,12 @@
         </div>
         <div class="project-card">
             <div class="project-content">
-                <img src="../images/matlab-gui.png" alt="Logo página web" class="project-logo" onclick="window.open('https://github.com/fernandezfernandezpol/matlab-gui-musical-note-detector', '_blank')" aria-label="Abrir MATLAB GUI Musical Note Detector en GitHub">
+                <img src="../images/logos/matlab-gui.png" alt="Logo página web" class="project-logo" onclick="window.open('https://github.com/fernandezfernandezpol/matlab-gui-musical-note-detector', '_blank')" aria-label="Abrir MATLAB GUI Musical Note Detector en GitHub">
                 <div class="project-details">
                     <span class="project-name">MATLAB GUI Musical Note Detector</span>
                     <div class="project-badges">
                         <div class="project-badge">
-                            <img src="../images/matlab.png" alt="MATLAB" class="badge-logo">
+                            <img src="../images/logos/matlab.png" alt="MATLAB" class="badge-logo">
                             <span>MATLAB</span>
                         </div>
                     </div>
@@ -59,24 +59,24 @@
         </div>
         <div class="project-card">
             <div class="project-content">
-                <img src="../images/python-web.png" alt="Logo página web con python" class="project-logo" onclick="window.open('https://github.com/fernandezfernandezpol/python-embedded-web-chat-analyzer', '_blank')" aria-label="Abrir Python Embedded Website Chat Analyzer en GitHub">
+                <img src="../images/logos/python-web.png" alt="Logo página web con python" class="project-logo" onclick="window.open('https://github.com/fernandezfernandezpol/python-embedded-web-chat-analyzer', '_blank')" aria-label="Abrir Python Embedded Website Chat Analyzer en GitHub">
                 <div class="project-details">
                     <span class="project-name">Python embedded website chat analyzer</span>
                     <div class="project-badges">
                         <div class="project-badge">
-                            <img src="../images/python.png" alt="Python logo" class="badge-logo">
+                            <img src="../images/logos/python.png" alt="Python logo" class="badge-logo">
                             <span>Python</span>
                         </div>
                         <div class="project-badge">
-                            <img src="../images/html.png" alt="HTML logo" class="badge-logo">
+                            <img src="../images/logos/html.png" alt="HTML logo" class="badge-logo">
                             <span>HTML</span>
                         </div>
                         <div class="project-badge">
-                            <img src="../images/css.png" alt="CSS logo" class="badge-logo">
+                            <img src="../images/logos/css.png" alt="CSS logo" class="badge-logo">
                             <span>CSS</span>
                         </div>
                         <div class="project-badge">
-                            <img src="../images/javascript.png" alt="JavaScript logo" class="badge-logo">
+                            <img src="../images/logos/javascript.png" alt="JavaScript logo" class="badge-logo">
                             <span>JavaScript</span>
                         </div>
                     </div>
@@ -93,7 +93,7 @@
     <div class="vertical-buttons">
         <div class="button-row">
             <button id="visitar-github" class="main-btn contact" onclick="window.open('https://github.com/fernandezfernandezpol', '_blank')">
-                <img src="../images/github.png" alt="GitHub" class="btn-icon">
+                <img src="../images/logos/github.png" alt="GitHub" class="btn-icon">
             </button>
             <span class="button-label" data-i18n="projects.github-label">Github:<br>@fernandezfernandezpol</span>
         </div>
