--- a/pages/sidebar.html
+++ b/pages/sidebar.html
@@ -13,8 +13,8 @@
         </div>
         <div class="submenu">
             <a id="sidebar-double-bachelors" href="#" data-i18n="sidebar.doubleBachelors">Doble Titulación (Aeros + Telecos)</a>
-            <a id="sidebar-aeroespace" href="#" data-i18n="sidebar.aerospace">Ingeniería Aeroespacial</a>
-            <a id="sidebar-telecommunitacions" href="#" data-i18n="sidebar.telecom">Ingeniería en Telecomunicaciones</a>
+            <a id="sidebar-aerospace" href="#" data-i18n="sidebar.aerospace">Ingeniería Aeroespacial</a>
+            <a id="sidebar-telecommunications" href="#" data-i18n="sidebar.telecom">Ingeniería en Telecomunicaciones</a>
             <a id="sidebar-background" href="#" data-i18n="sidebar.background">Background</a>
         </div>
     </div>
