--- a/pages/telecommunications.html
+++ b/pages/telecommunications.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../styles/main.css">
-    <link rel="icon" type="image/x-icon" href="../images/logo-index.ico">
-    <link rel="icon" type="image/png" href="../images/logo-index.png">
+    <link rel="icon" type="image/x-icon" href="../images/logos/logo-index.ico">
+    <link rel="icon" type="image/png" href="../images/logos/logo-index.png">
     <title data-i18n="title">Ingeniería en Telecomunicaciones</title>
 </head>
 <body>
@@ -13,6 +13,24 @@
     <div class="page-title">
         <h1 data-i18n="title">Ingeniería en Telecomunicaciones</h1>
     </div>
+    <section class="scroll-section-left">
+        <div class="image-container-left">
+            <img src="../images/fotos/telecos.jpg" alt="Yo" />
+        </div>
+        <div class="text-container-left">
+            <h2>¿Por qué Ingeniería en Telecomunicaciones?</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+        </div>
+    </section>
     <div class="separator-title">
         <h2 data-i18n="video-promo-title">Vídeo promocional del Grado en Telecomunicaciones:</h2>
         <div class="video-container">
